<resources>
    <string name="app_name">Game Center</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="input_your_email">Input your email…</string>
    <string name="input_your_password">Input your password…</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="here">here!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="member_registration">Member Registration</string>
    <string name="name">Name</string>
    <string name="input_your_name">Input your name…</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="confirm_your_password">Confirm your password…</string>
    <string name="input_your_phone_number">Input your phone number…</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="status">Status</string>
    <string name="register">Register</string>
    <string name="must_be_filled">Must be filled</string>
    <string name="choose_your_birthday">Choose your birthday…</string>
    <string name="birthday">Birthday</string>
    <string name="password_must_be_the_same">Password must be the same</string>
    <string name="choose_birthday_error">Choose your birthday</string>
    <string name="choose_gender">Choose your gender</string>
    <string name="choose_status">Choose status</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="password_short">Password is to short!</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="information">Information</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="categories">Categories</string>
    <string name="games">Games</string>

    <string name="api_games">https://api.myjson.com/bins/15cfg8</string>

    <!--Status-->
    <string-array name="status_array">
        <item>Choose Status</item>
        <item>Student</item>
        <item>Employee</item>
        <item>Freelancer</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_price">Total Price: Rp</string>
    <string name="item_s_in_your_cart">item(s) in your cart</string>
    <string name="title_activity_game_detail">GameDetailActivity</string>
    <string name="my_games">My Games</string>
    <string name="my_item">My Item</string>
    <string name="my_wallet">My Wallet</string>
    <string name="your_balance">Your balance</string>
    <string name="my_playing_hours">My Playing Hours</string>
    <string name="hours">hours</string>
    <string name="play_game">Play Game</string>
    <string name="your_cart_is_empty">Your cart is empty!</string>
    <string name="top_up_your_wallet_here">Top up your wallet here…</string>
    <string name="top_up">Top Up</string>
    <string name="payment_confirmation">Payment Confirmation</string>
    <string name="total_price_without_rp">Total price</string>
    <string name="balance">Balance</string>
    <string name="pay">Pay</string>

    <string name="about_us_title">About Us</string>
    <string name="about_us">We offer a catalog of PC, Mac, and Linux games, many of which support Game Center so you can buy once and play anywhere, and Cross-Platform Multiplayer so you can play with all your friends, no matter where they log in</string>
    <string name="title_activity_location">Map</string>
    <string name="profile">Profile</string>
    <string name="user_profile">User Profile</string>
    <string name="change">Change</string>
    <string name="input_your_money">Input your money</string>
    <string name="you_don_t_have_a_game">You don\'t have a game</string>
</resources>
